Fix body dark mode color

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -1,3 +1,7 @@
+.body--light {
+  background-color: #fafafa;
+}
+
 .publisher-layout {
   max-width: 1280px;
   margin-left: auto;
